--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,7 @@
-$primary: rgb(29, 29, 29);
-$primarydark: rgb(18, 18, 18);
+// $primary: rgb(29, 29, 29);
+$primary: rgb(237, 86, 21);
+$primarydark: rgb(197, 72, 18);
 $secondary: rgb(237, 86, 21);
 $secondarydark: rgb(197, 72, 18);
 $tertiary: #fff;
+$wht: white;
