--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -11,6 +11,7 @@
   background-color: $tertiary;
   width: 200px;
   margin: 2rem;
+  border: 1px solid black;
   border-radius: 5px;
   padding: 2rem;
   transition: all 0.5s;
