--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,22 +1,33 @@
 @import "colors";
 
 nav {
-  background-color: $secondary;
+  background-color: $wht;
   display: flex;
   justify-content: space-between;
-  padding: 0 2rem;
+  padding: 0 3rem;
+  height: 100px;
 
-  > h2 {
-    text-transform: uppercase;
-    color: $primary;
+
+  > .logo {
+    background-color: aqua;
+    height: 100px;
+    width: auto;
+    // margin-left: -4rem;
+
+    > .logo-img{
+      height: 100px;
+      width: auto;
+      // padding-left: -4rem;
+
+    }
   }
 
-  > div {
+  > .rest {
     display: flex;
     align-items: center;
 
     > a {
-      color: $primary;
+      color: $secondary;
       font-size: 1.2rem;
       margin: 0 1rem;
       transition: all 0.3s;
